<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/_8sdp"
    android:paddingStart="@dimen/_8sdp"
    android:paddingEnd="@dimen/_8sdp"
    android:paddingBottom="@dimen/_3sdp"
    android:background="@drawable/bg_dialog">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialog_user_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_user"
        android:textSize="@dimen/_13ssp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/open_sans"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginStart="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/dialog_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:hint="@string/user_name"
        android:textSize="@dimen/_10ssp"
        android:maxLength="30"
        android:maxLines="1"
        android:inputType="text"
        android:textColor="#1B1A1A"
        android:fontFamily="@font/open_sans"
        app:layout_constraintTop_toBottomOf="@id/dialog_user_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/dialog_user_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:hint="@string/user_email_2"
        android:textSize="@dimen/_10ssp"
        android:maxLength="50"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:textColor="#1B1A1A"
        android:fontFamily="@font/open_sans"
        app:layout_constraintTop_toBottomOf="@id/dialog_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/dialog_user_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:hint="@string/user_password"
        android:textSize="@dimen/_10ssp"
        android:textColor="#1B1A1A"
        android:maxLength="50"
        android:maxLines="1"
        android:inputType="text"
        android:fontFamily="@font/open_sans"
        app:layout_constraintTop_toBottomOf="@id/dialog_user_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/dialog_user_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:hint="@string/user_number_2"
        android:textSize="@dimen/_10ssp"
        android:maxLength="50"
        android:maxLines="1"
        android:inputType="number|phone"
        android:textColor="#1B1A1A"
        android:fontFamily="@font/open_sans"
        app:layout_constraintTop_toBottomOf="@id/dialog_user_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:text="@string/confirm"
        android:textSize="@dimen/_10ssp"
        android:fontFamily="@font/open_sans"
        android:textAllCaps="false"
        android:background="@drawable/bg_button_transparent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/dialog_user_number"
        app:layout_constraintEnd_toStartOf="@id/cancel_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:text="@string/cancel"
        android:textSize="@dimen/_10ssp"
        android:fontFamily="@font/open_sans"
        android:textAllCaps="false"
        android:background="@drawable/bg_button_transparent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/dialog_user_number"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>