<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/_8sdp"
    android:paddingStart="@dimen/_8sdp"
    android:paddingEnd="@dimen/_8sdp"
    android:paddingBottom="@dimen/_3sdp"
    android:background="@drawable/bg_dialog">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialog_custom_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/please_wait"
        android:textSize="@dimen/_13ssp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/open_sans"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginStart="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialog_custom_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        tools:text="@string/progress_message"
        android:textSize="@dimen/_10ssp"
        android:fontFamily="@font/open_sans"
        app:layout_constraintTop_toBottomOf="@id/dialog_custom_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:text="@string/confirm"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/open_sans"
        android:textAllCaps="false"
        android:background="@drawable/bg_button_transparent"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/dialog_custom_message"
        app:layout_constraintEnd_toStartOf="@id/cancel_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:text="@string/cancel"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/open_sans"
        android:textAllCaps="false"
        android:background="@drawable/bg_button_transparent"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/dialog_custom_message"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>